--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"Description\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server":"nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +20,10 @@
     "express": "^4.17.1",
     "helmet": "^3.21.3",
     "knex": "^0.20.12",
-    "nodemon": "^2.0.2",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "nodemon": "^2.0.2"
   }
 }
